handsonreact 'Fundaments' and 'Advanced' notes.

--- a/typescript/React.ipynb
+++ b/typescript/React.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a03a2c62",
+   "id": "c021b3d1",
    "metadata": {},
    "source": [
     "# React Basic Concepts"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c52ea33",
+   "id": "333c2237",
    "metadata": {},
    "source": [
     "React is a __declarative language__ for syncing the DOM with application data (and building UI).  It is __component based__ (similar to Angular in that regard).\n",
@@ -20,11 +20,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d4ec30d",
+   "id": "17c835ce",
    "metadata": {},
    "source": [
     "# ToDo\n",
     "\n",
+    "1. paste-clean-diff usage\n",
     "1. SCSS\n",
     "1. CSS encapsulation\n",
     "1. Pure HTML templates?\n",
@@ -36,12 +37,22 @@
     "1. useState() and reference members\n",
     "1. more advanced routing\n",
     "1. redux tutorial and understand the redux commit from labs 23-25\n",
-    "1. React Query"
+    "1. React Query\n",
+    "1. React Devtools Extension (and using it on public sites that use react)\n",
+    "1. PropTypes library (for JS only)\n",
+    "1. Node running in general, esp. running React & Angular\n",
+    "1. useContext/React Context (and when to use vs. Redux)\n",
+    "1. Testing (Jest vs. Jasmine) (https://handsonreact.com/docs/testing)\n",
+    "1. ChatGPT chat recommendations from before\n",
+    "1. Official React site\n",
+    "1. JS vs. TS ChatGPT thread from before\n",
+    "1. XSS vulnerabilities\n",
+    "1. Component libraries?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cbb2c8e8",
+   "id": "a8ad85c5",
    "metadata": {},
    "source": [
     "# React vs. Angular"
@@ -49,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b23e64a2",
+   "id": "68cc0b9f",
    "metadata": {},
    "source": [
     "- Angular = JS into HTML, React = HTML into JS\n",
@@ -60,6 +71,7 @@
     "- no modules needed because HTML and TS/JS are together in 1 file\n",
     "- use (remapped) versions of built-in attributes, handlers, etc. instead of Angular's bindings\n",
     "- change detection happens on each call of functions that get JSX/TSX\n",
+    "  - instead of change detection strategy, you can choose to memoize a child as needed\n",
     "- pure TS/JS code to show/hide instead of special conditional directives like in Angular\n",
     "- Unlike in Angular, you end up doing stuff like event handlers that look more like pure JS (instead of more indirection)\n",
     "- instead of OOP concepts like services and dependency injection, you will mostly make function calls\n",
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13d72396",
+   "id": "0327b7a5",
    "metadata": {},
    "source": [
     "# Setup"
@@ -76,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "387fbe29",
+   "id": "64d3d011",
    "metadata": {},
    "source": [
     "1.  Have NodeJS setup already\n",
@@ -94,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27819d23",
+   "id": "ff33f465",
    "metadata": {},
    "source": [
     "# Creating JS App\n",
@@ -106,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a05feb",
+   "id": "a16c172f",
    "metadata": {},
    "source": [
     "# Creating TS App"
@@ -114,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be6ac600",
+   "id": "4a89c7da",
    "metadata": {},
    "source": [
     "1. `npx create-react-app my-app --template typescript --use-npm`\n",
@@ -124,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e43393e5",
+   "id": "16ac55cc",
    "metadata": {},
    "source": [
     "# Default Project Structure\n",
@@ -145,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d2facbd",
+   "id": "c637b1a5",
    "metadata": {},
    "source": [
     "# CSS\n",
@@ -157,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2da7ffe",
+   "id": "bf89c931",
    "metadata": {},
    "source": [
     "# Components\n",
@@ -180,6 +192,10 @@
     "1. Two-way binding (as in Angular) is done more manually\n",
     "   - eg. set `value` and `onChange` of form controls\n",
     "   \n",
+    "The object passed to a component function wraps the attributes from the React element and is known as `props`.  React expects that you will treat props as __read-only__.\n",
+    "\n",
+    "Like in Angular, __data flows down__ and __events flow up__.\n",
+    "   \n",
     "## Events\n",
     "\n",
     "1. Use (properly cased) HTML handlers (which React remaps internally)\n",
@@ -196,7 +212,11 @@
     "\n",
     "1. Functions that return TSX are called every time the rendering might need to change (eg. on click handlers)\n",
     "1. You can use `useState()` to maintain state between calls (see __React Library__ below).\n",
-    "1. Alternatively, you can use __redux__\n",
+    "1. If two components need the same state, manage it in their parent and pass the values in\n",
+    "   - remember it's not like Angular where you have static bindings of data properties\n",
+    "1. Alternatively, you can use __redux__ or __React Context__\n",
+    "   - redux is better when different components in the tree need the same state, so that you don't have to pass around a bunch of props all over the place\n",
+    "   - React context solves a similar problem but has less boilerplate code\n",
     "\n",
     "## Hooks\n",
     "\n",
@@ -205,12 +225,41 @@
     "You can create your own hook as follows:\n",
     "1. define a function (eg. `useSomething`) that returns some kind of object full of properties that can be decomposed\n",
     "1. inside the function, you can use other hooks like the ones mentioned above\n",
-    "1. then you can use this to wrap a lot of the statefulness and lifecycle management of your components"
+    "1. then you can use this to wrap a lot of the statefulness and lifecycle management of your components\n",
+    "\n",
+    "## Class Components\n",
+    "\n",
+    "You can write classes for components, and this used to be the way to do it if you needed lifetime management and state, but now that hooks have been introduced, it's not longer the mainstream recommended way.\n",
+    "\n",
+    "React people prefer to write functions instead.\n",
+    "\n",
+    "Here is an example of how the class syntax looks though:\n",
+    "```\n",
+    "class HelloWorld extends React.Component {\n",
+    "  render() {\n",
+    "    return <div className=\"container\">Hello Class Component</div>;\n",
+    "  }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "## Mount/Unmount\n",
+    "\n",
+    "A class component has similar lifecycle hooks to an Angular component, but a function component is different.  It mounts when added to the real DOM, and is still considered mounted when it is modified. It unmounts when removed from the DOM (eg. by conditional inclusion in parent).\n",
+    "\n",
+    "## Render Props\n",
+    "\n",
+    "This is the equivalent of __content projection__ in Angular.  There is no special framework or API for it - just include a __function variable in the props__ passed into a component, and then a parent can set that.  Call the function in the child component and have it __return an element__.  Alternatively, you could pass an element in as a prop.\n",
+    "\n",
+    "## Higher-Order Components (HOCs)\n",
+    "\n",
+    "This is the name for a technique where instead of returning an element, a function returns a function that returns an element.  This can give you the ability to dynamically determine things like which props to pass in, etc.\n",
+    "\n",
+    "It can also refer to a function that takes a function, where the higher-level function is itself a component."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c3de08f7",
+   "id": "e799cfcb",
    "metadata": {},
    "source": [
     "# TSX/JSX Syntax\n",
@@ -240,12 +289,27 @@
     "  - eg. instead of `for` in form elements you have to use `htmlFor` for a similar reason\n",
     "  - eg. names like `tabIndex`, `onClick`, and `readOnly` become case sensitive\n",
     "- conditional showing/hiding looks like this: `{showA ? (<component1/>) : (<component2/>)}`\n",
-    "  - it will work __without the `()` as well"
+    "  - it will work __without the `()` as well\n",
+    "- you can __assign elements to variables__ and __expand in-place__ arrays of elements\n",
+    "  ```\n",
+    "  function FruitList(props) {\n",
+    "    const fruitListItems = [];\n",
+    "    const fruits = props.fruits;\n",
+    "    for (let index = 0; index < fruits.length; index++) {\n",
+    "      const fruit = fruits[index];\n",
+    "      const fruitListItem = <li key={fruit.id}>{fruit.name}</li>;\n",
+    "      fruitListItems.push(fruitListItem);\n",
+    "    }\n",
+    "    return <ul>{fruitListItems}</ul>;\n",
+    "  }\n",
+    "  ```\n",
+    "  \n",
+    "- a __null__ value in `{}` will render nothing"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6ccf315f",
+   "id": "572b81c8",
    "metadata": {},
    "source": [
     "# React Library\n",
@@ -269,17 +333,42 @@
     "     - `useEffect(() => {...});` lets you queue up a lambda to get called after the component is rendered\n",
     "     - it gets called again each render/update cycle\n",
     "     - the point is things like updating the rendered DOM directly in code (eg. to set the page title or to start loading from a server after initial page load), etc.\n",
+    "     - you can also pass state variables in the 2nd arg\n",
+    "        - eg. `useEffect(fn, [var1, var2]);` which will run the effect only when var1 and var2 change\n",
+    "     - you can pass `[]` to only run the effect after component mount\n",
+    "     - you can __return a function__ from the function inside `useEffect()` to perform __cleanup__\n",
+    "         - will be called on unmount\n",
+    "         - eg. so you can __subscribe and unsubscribe__\n",
+    "  - eg. `import {useRef} from 'react';`\n",
+    "     - `const ref = useRef(0);`\n",
+    "        - this gets a reference variable for the current component, initially set to 0\n",
+    "        - you use `ref.current` to get the current value\n",
+    "        - you can change the value by changing `ref.current`\n",
+    "        - changing the value does not cause a re-render - it is a plain JS object\n",
+    "           - eg. to store click count for logging to console\n",
+    "        - JSX also has `ref` attributes on elements which you can set to a ref variable\n",
+    "          - then your click handlers and such can use that variable to reference to the element\n",
     "  - eg. `import {SyntheticEvent} from 'react';`\n",
     "     - this is React's wrapper around events\n",
     "     - events are usually browser specific, so this wrapper makes it more generic/stable\n",
     "     - event handlers will be passed instances of this\n",
     "     - you can use `event.nativeEvent` to get the browser one\n",
-    "     - the usual stuff like `stopPropagation()` and `preventDefault()` are implemented on `SyntheticEvent`"
+    "     - the usual stuff like `stopPropagation()` and `preventDefault()` are implemented on `SyntheticEvent`\n",
+    "  - eg. `import {memo} from 'react';`\n",
+    "     - `const MemoizedMyComponent = memo(function MyComponent(props: any));`\n",
+    "     - kind of like `OnPush` in Angular\n",
+    "     - `memo` is a higher-level component that takes a component and doesn't re-render it unless the __props or state variables change__\n",
+    "        - eg. if the parent is re-rendered, a memoized child won't be re-rendered\n",
+    "     - the re-rendering is prevented by memoizing the return value of the component function based on the props\n",
+    "        - for that to work, it must be a __pure function__ that returns the same result with the same props\n",
+    "     - it is considered an optimization rather than a gaurantee, so you still may get re-rendered when you don't think you will (don't rely on not rendering for actual functionality)\n",
+    "     - you can customize the comparison used to determine if the props are equal with a 2 input predicate in teh 2nd arg of `memo()`\n",
+    "        - default comparison is via `Object.is()` on each field (not same as `===` or `==`)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a4c8a3fb",
+   "id": "5021004a",
    "metadata": {},
    "source": [
     "# Forms\n",
@@ -299,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19244efa",
+   "id": "d142b7af",
    "metadata": {},
    "source": [
     "# Fake Server for Testing/Development\n",
@@ -318,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74446ff5",
+   "id": "5431e1eb",
    "metadata": {},
    "source": [
     "# Calling Server from React\n",
@@ -338,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3040ec2f",
+   "id": "580828de",
    "metadata": {},
    "source": [
     "# Routing\n",
@@ -361,12 +450,14 @@
     "   - eg. a section of a page\n",
     "1. Use `useParams()` to get an object containing route parameters\n",
     "   - you can pass those into the route path (eg. `/path/to/route:id` has `id` parameter)\n",
-    "1. When run as a __single-page applications__ (like `npm start` does), invalid routes go back to the root route but still update the url in the address bar"
+    "1. When run as a __single-page applications__ (like `npm start` does), invalid routes go back to the root route but still update the url in the address bar\n",
+    "1. You can provie a route to path `*` to handle default routing (eg. 404 page)\n",
+    "1. To nest routes, you can use `*` at the end of a path (eg. `/movies/*`)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "91e35d8e",
+   "id": "3dfbba6f",
    "metadata": {},
    "source": [
     "# Packaging and Building\n",
@@ -381,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e609e50a",
+   "id": "1e727ce4",
    "metadata": {},
    "source": [
     "# Redux"
@@ -389,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c53300d",
+   "id": "dde6806c",
    "metadata": {},
    "source": [
     "## Setup (for Project)\n",
@@ -399,9 +490,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e36fe8e1",
+   "metadata": {},
+   "source": [
+    "# Virtual DOM\n",
+    "\n",
+    "## Elements\n",
+    "\n",
+    "React elements are the things returned by components.  They look like DOM elements (on purpose) but are a browser-independent virtual DOM maintained by React.  They represent what you want the UI to look like when the real DOM gets rendered.\n",
+    "\n",
+    "The tags returned by JSX are react elements.  You can create them explicitly in code (without even needing JSX) via `React.createElement()`.\n",
+    "\n",
+    "The JSX compiler (__Babel__) converts what look like elements in your code into `React.createElement()` calls.\n",
+    "\n",
+    "## Updates\n",
+    "\n",
+    "React is able to efficiently __diff the virutal DOM__ in order to make the minimal changes to the browser DOM necessary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4d8b8fa",
+   "metadata": {},
+   "source": [
+    "# Re-Rendering\n",
+    "\n",
+    "1. Triggered by __props update__ (via `===`)\n",
+    "1. Triggered by state update via `setStae()` or the function returned by `useState()`\n",
+    "1. Triggered by parent being re-rendered\n",
+    "1. React is very efficient about only updating the real DOM as needed based on the virtual DOM rendered, but re-rendering too much in the virtual DOM can be a source of performance issues too.  When a performance issue is found, __wasted renders__ may be the culprit.\n",
+    "1. You can use `memo` to help avoid wasted renders."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "392dfcd2",
+   "id": "7bb94b0f",
    "metadata": {},
    "outputs": [],
    "source": []
