Notes from Redux part of handsonreact.

--- a/typescript/React.ipynb
+++ b/typescript/React.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c021b3d1",
+   "id": "faf946c0",
    "metadata": {},
    "source": [
     "# React Basic Concepts"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "333c2237",
+   "id": "c0a26e92",
    "metadata": {},
    "source": [
     "React is a __declarative language__ for syncing the DOM with application data (and building UI).  It is __component based__ (similar to Angular in that regard).\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17c835ce",
+   "id": "2b5c5d39",
    "metadata": {},
    "source": [
     "# ToDo\n",
@@ -36,7 +36,6 @@
     "1. rxjs?\n",
     "1. useState() and reference members\n",
     "1. more advanced routing\n",
-    "1. redux tutorial and understand the redux commit from labs 23-25\n",
     "1. React Query\n",
     "1. React Devtools Extension (and using it on public sites that use react)\n",
     "1. PropTypes library (for JS only)\n",
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8ad85c5",
+   "id": "521a6f64",
    "metadata": {},
    "source": [
     "# React vs. Angular"
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68cc0b9f",
+   "id": "5f1675b5",
    "metadata": {},
    "source": [
     "- Angular = JS into HTML, React = HTML into JS\n",
@@ -75,12 +74,14 @@
     "- pure TS/JS code to show/hide instead of special conditional directives like in Angular\n",
     "- Unlike in Angular, you end up doing stuff like event handlers that look more like pure JS (instead of more indirection)\n",
     "- instead of OOP concepts like services and dependency injection, you will mostly make function calls\n",
-    "- routing is very similar"
+    "- routing is very similar\n",
+    "- __Redux__ instead of __ngrx__\n",
+    "   - though redux can be used in Angular too"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0327b7a5",
+   "id": "b22ec80a",
    "metadata": {},
    "source": [
     "# Setup"
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64d3d011",
+   "id": "057085b8",
    "metadata": {},
    "source": [
     "1.  Have NodeJS setup already\n",
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff33f465",
+   "id": "eabb0773",
    "metadata": {},
    "source": [
     "# Creating JS App\n",
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a16c172f",
+   "id": "61f167ba",
    "metadata": {},
    "source": [
     "# Creating TS App"
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a89c7da",
+   "id": "6b16273f",
    "metadata": {},
    "source": [
     "1. `npx create-react-app my-app --template typescript --use-npm`\n",
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16ac55cc",
+   "id": "4175c7fc",
    "metadata": {},
    "source": [
     "# Default Project Structure\n",
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c637b1a5",
+   "id": "ed872bdc",
    "metadata": {},
    "source": [
     "# CSS\n",
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf89c931",
+   "id": "b08b8735",
    "metadata": {},
    "source": [
     "# Components\n",
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e799cfcb",
+   "id": "54e957ff",
    "metadata": {},
    "source": [
     "# TSX/JSX Syntax\n",
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "572b81c8",
+   "id": "99c54158",
    "metadata": {},
    "source": [
     "# React Library\n",
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5021004a",
+   "id": "8cbd4d8c",
    "metadata": {},
    "source": [
     "# Forms\n",
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d142b7af",
+   "id": "1893a49e",
    "metadata": {},
    "source": [
     "# Fake Server for Testing/Development\n",
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5431e1eb",
+   "id": "df8d523c",
    "metadata": {},
    "source": [
     "# Calling Server from React\n",
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "580828de",
+   "id": "88eedd81",
    "metadata": {},
    "source": [
     "# Routing\n",
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dfbba6f",
+   "id": "1f43f893",
    "metadata": {},
    "source": [
     "# Packaging and Building\n",
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e727ce4",
+   "id": "c900368d",
    "metadata": {},
    "source": [
     "# Redux"
@@ -480,18 +481,93 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dde6806c",
+   "id": "3cf210c3",
    "metadata": {},
    "source": [
     "## Setup (for Project)\n",
     "\n",
     "1. `npm install redux react-redux redux-devtools-extension redux-thunk`\n",
-    "1. `npm install --save-dev @types/react-redux`"
+    "1. `npm install --save-dev @types/react-redux`\n",
+    "\n",
+    "## Purpose\n",
+    "\n",
+    "Shared state between components that are not in an immediate parent-child relationship, such as common fields used by various nodes throughout your component tree.\n",
+    "\n",
+    "It is an in-memory store meant to replace having to wire a bunch of props all over the place just to facilitate sparsely shared state.\n",
+    "\n",
+    "## Concepts\n",
+    "\n",
+    "- __State__ - read-only object tree representing all the shared state in the application\n",
+    "- __Actions__ - dispatched to store to transform the state\n",
+    "   - action objects have at least a __type__ field (which should be a string constant)\n",
+    "   - often also have a __payload__ field which has whatever you want\n",
+    "   - often created by a function (an __action creator__)\n",
+    "- __Reducers__ - functions that return new state based on old state and action\n",
+    "   - 2 params: state and action\n",
+    "   - return value: new state\n",
+    "   - typically a __switch statement__ with a default\n",
+    "   - multiple reducers can be __composed__ into 1 reducer to separate concerns\n",
+    "   - typically the same name as the state property modified\n",
+    "- __Store__ - holds the state object\n",
+    "   - state accessible via `getState()`\n",
+    "   - state modified via `dispatch(action)`\n",
+    "   - subscribe to changes via `subscribe(listener)`, which returns a function for unsubscribing\n",
+    "   \n",
+    "## Debugging\n",
+    "\n",
+    "__Redux DevTools__ Chrome extension can be installed to your browser and then enabled in your store on creation.  See https://redux.js.org/usage/configuring-your-store#integrating-the-devtools-extension.  Once integrated, you'll get a tab in Chrome Devtools for things like time-travel debugging.  Many sites use it in production, which makes it a nice way to learn Redux (eg. facebook, netflix, etc.).\n",
+    "\n",
+    "Use the `compseWithDevTools()` middleware from the npm package.\n",
+    "\n",
+    "## 'redux' npm package\n",
+    "\n",
+    "- __createStore(reducer)__\n",
+    "   - create a store (eg. to store as a global variable) that will use the reducer function for all dispatched actions\n",
+    "   - 2 optional params after reducer:\n",
+    "      - initial state\n",
+    "      - function to run to active enhancements (like devtools extension)\n",
+    "- __applyMiddleware(middleware)__\n",
+    "   - applies a middleware function to the store (pass result of the call into the enhancements arg of `createStore()`\n",
+    "   - allows middleware to change how `dispatch()` works\n",
+    "      \n",
+    "## 'react-redux' npm package\n",
+    "\n",
+    "- __Provider__\n",
+    "  - provides access to the store from anywhere within the component hierarchy without directly referencing a global variable\n",
+    "  - `<Provider store={store}><....your app here...></Provider>`\n",
+    "  - `useSelector` and `useDispatch` will automatically use this store\n",
+    "  - it seems a bit unnecessary, but it's done this way for __testability__\n",
+    "    - tests can make the provider use something else without having to mess with the global variable\n",
+    "\n",
+    "- __useSelector(fn)__\n",
+    "  - get a value from the store\n",
+    "  - the fn passed in should take the state and return what you want from the state\n",
+    "  \n",
+    "- __useDispatch()__\n",
+    "  - gets a function that you can call to dispatch an action to the store\n",
+    "  - should call it with the action as a parameter\n",
+    "  \n",
+    "## 'redux-thunk' npm package\n",
+    "\n",
+    "- middleware that enables __async actions__ and HTTP calls\n",
+    "- `thunk` (imported) is passed into `applyMiddlware` in `createStore` to activate for the store on creation\n",
+    "- instead of dispatching an action object, you __dispatch a thunk__\n",
+    "   - the thunk is a function and should take the dispatch function and getSTate function for the store\n",
+    "   - it should return an async object\n",
+    "   - you can `await` the result of `dispatch()` elsewhere\n",
+    "   - the thunk can do one or more dispatches, chain promises, deal with errors, etc. inside the promise chain\n",
+    "- if you use an action creator, you'll instead make a __thunk creator__ (function that returns a function)\n",
+    "\n",
+    "## '@types/react-redux' npm package\n",
+    "\n",
+    "- Redux and Redux thunk already install with TypeScript definitions, but React Redux doesn't\n",
+    "- this library provides those type definitions to make it work properly in TypeScript\n",
+    "- the tutorial shows installing it as '--save-dev' but that's probably not necessary (?)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e36fe8e1",
+   "id": "cf9e5fb0",
    "metadata": {},
    "source": [
     "# Virtual DOM\n",
@@ -511,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4d8b8fa",
+   "id": "0935cae1",
    "metadata": {},
    "source": [
     "# Re-Rendering\n",
@@ -526,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bb94b0f",
+   "id": "5701640e",
    "metadata": {},
    "outputs": [],
    "source": []
