Remaining handsonreact topics.

--- a/typescript/React.ipynb
+++ b/typescript/React.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "faf946c0",
+   "id": "717e338b",
    "metadata": {},
    "source": [
     "# React Basic Concepts"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0a26e92",
+   "id": "a313d29b",
    "metadata": {},
    "source": [
     "React is a __declarative language__ for syncing the DOM with application data (and building UI).  It is __component based__ (similar to Angular in that regard).\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b5c5d39",
+   "id": "cdc59d03",
    "metadata": {},
    "source": [
     "# ToDo\n",
@@ -46,12 +46,14 @@
     "1. Official React site\n",
     "1. JS vs. TS ChatGPT thread from before\n",
     "1. XSS vulnerabilities\n",
-    "1. Component libraries?"
+    "1. Component libraries?\n",
+    "1. Brush up on Grid and Flexbox\n",
+    "1. Bootstrap framework"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "521a6f64",
+   "id": "463fba09",
    "metadata": {},
    "source": [
     "# React vs. Angular"
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f1675b5",
+   "id": "c6e4f62b",
    "metadata": {},
    "source": [
     "- Angular = JS into HTML, React = HTML into JS\n",
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b22ec80a",
+   "id": "b9590f5a",
    "metadata": {},
    "source": [
     "# Setup"
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "057085b8",
+   "id": "fa56b43a",
    "metadata": {},
    "source": [
     "1.  Have NodeJS setup already\n",
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eabb0773",
+   "id": "04e5f8ae",
    "metadata": {},
    "source": [
     "# Creating JS App\n",
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61f167ba",
+   "id": "5531daca",
    "metadata": {},
    "source": [
     "# Creating TS App"
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b16273f",
+   "id": "f100e302",
    "metadata": {},
    "source": [
     "1. `npx create-react-app my-app --template typescript --use-npm`\n",
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4175c7fc",
+   "id": "3ba1c746",
    "metadata": {},
    "source": [
     "# Default Project Structure\n",
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed872bdc",
+   "id": "406f9846",
    "metadata": {},
    "source": [
     "# CSS\n",
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b08b8735",
+   "id": "40df5bea",
    "metadata": {},
    "source": [
     "# Components\n",
@@ -260,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54e957ff",
+   "id": "71d4b6e2",
    "metadata": {},
    "source": [
     "# TSX/JSX Syntax\n",
@@ -310,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99c54158",
+   "id": "477c3ae8",
    "metadata": {},
    "source": [
     "# React Library\n",
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cbd4d8c",
+   "id": "99e7d8dc",
    "metadata": {},
    "source": [
     "# Forms\n",
@@ -389,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1893a49e",
+   "id": "41253868",
    "metadata": {},
    "source": [
     "# Fake Server for Testing/Development\n",
@@ -408,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df8d523c",
+   "id": "261ce6e0",
    "metadata": {},
    "source": [
     "# Calling Server from React\n",
@@ -428,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88eedd81",
+   "id": "ea042385",
    "metadata": {},
    "source": [
     "# Routing\n",
@@ -458,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f43f893",
+   "id": "5e6ab127",
    "metadata": {},
    "source": [
     "# Packaging and Building\n",
@@ -473,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c900368d",
+   "id": "700b94bf",
    "metadata": {},
    "source": [
     "# Redux"
@@ -481,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cf210c3",
+   "id": "affd165e",
    "metadata": {},
    "source": [
     "## Setup (for Project)\n",
@@ -567,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf9e5fb0",
+   "id": "ad33d6e2",
    "metadata": {},
    "source": [
     "# Virtual DOM\n",
@@ -587,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0935cae1",
+   "id": "eefff3ff",
    "metadata": {},
    "source": [
     "# Re-Rendering\n",
@@ -602,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5701640e",
+   "id": "ea09bda4",
    "metadata": {},
    "outputs": [],
    "source": []
