--- a/typescript/React.ipynb
+++ b/typescript/React.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "717e338b",
+   "id": "56f5d670",
    "metadata": {},
    "source": [
     "# React Basic Concepts"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a313d29b",
+   "id": "e8dcf258",
    "metadata": {},
    "source": [
     "React is a __declarative language__ for syncing the DOM with application data (and building UI).  It is __component based__ (similar to Angular in that regard).\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdc59d03",
+   "id": "5ebde67b",
    "metadata": {},
    "source": [
     "# ToDo\n",
@@ -42,18 +42,18 @@
     "1. Node running in general, esp. running React & Angular\n",
     "1. useContext/React Context (and when to use vs. Redux)\n",
     "1. Testing (Jest vs. Jasmine) (https://handsonreact.com/docs/testing)\n",
-    "1. ChatGPT chat recommendations from before\n",
     "1. Official React site\n",
     "1. JS vs. TS ChatGPT thread from before\n",
     "1. XSS vulnerabilities\n",
     "1. Component libraries?\n",
     "1. Brush up on Grid and Flexbox\n",
-    "1. Bootstrap framework"
+    "1. Bootstrap framework\n",
+    "1. Bazel Integration"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "463fba09",
+   "id": "28e02ee5",
    "metadata": {},
    "source": [
     "# React vs. Angular"
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6e4f62b",
+   "id": "c37f4ea9",
    "metadata": {},
    "source": [
     "- Angular = JS into HTML, React = HTML into JS\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9590f5a",
+   "id": "9f8f6f23",
    "metadata": {},
    "source": [
     "# Setup"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa56b43a",
+   "id": "9598c388",
    "metadata": {},
    "source": [
     "1.  Have NodeJS setup already\n",
@@ -104,12 +104,14 @@
     "      - paste-clean-diff\n",
     "      - ES7+ React/Redux/React-Native snippets\n",
     "    - https://handsonreact.com/docs/visual-studio-code-setup\n",
-    "      - more stuff recommended by the tutorial site, but they clobber your settings assuming you don't already have your own"
+    "      - more stuff recommended by the tutorial site, but they clobber your settings assuming you don't already have your own\n",
+    "1.  TypeScript Compiler natively supports TSX syntax without plugins needed!\n",
+    "    - for JSX, you use Babel, which does need plugins"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "04e5f8ae",
+   "id": "594694dc",
    "metadata": {},
    "source": [
     "# Creating JS App\n",
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5531daca",
+   "id": "d66ceb18",
    "metadata": {},
    "source": [
     "# Creating TS App"
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f100e302",
+   "id": "fe754222",
    "metadata": {},
    "source": [
     "1. `npx create-react-app my-app --template typescript --use-npm`\n",
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba1c746",
+   "id": "b428e3db",
    "metadata": {},
    "source": [
     "# Default Project Structure\n",
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "406f9846",
+   "id": "edf2948c",
    "metadata": {},
    "source": [
     "# CSS\n",
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40df5bea",
+   "id": "d85cdbff",
    "metadata": {},
    "source": [
     "# Components\n",
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71d4b6e2",
+   "id": "047b5587",
    "metadata": {},
    "source": [
     "# TSX/JSX Syntax\n",
@@ -312,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "477c3ae8",
+   "id": "4ebb246f",
    "metadata": {},
    "source": [
     "# React Library\n",
@@ -371,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99e7d8dc",
+   "id": "ff8d988f",
    "metadata": {},
    "source": [
     "# Forms\n",
@@ -391,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41253868",
+   "id": "bc4cfa5c",
    "metadata": {},
    "source": [
     "# Fake Server for Testing/Development\n",
@@ -410,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "261ce6e0",
+   "id": "1d94c2ea",
    "metadata": {},
    "source": [
     "# Calling Server from React\n",
@@ -430,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea042385",
+   "id": "106e94f5",
    "metadata": {},
    "source": [
     "# Routing\n",
@@ -460,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e6ab127",
+   "id": "cfe9042f",
    "metadata": {},
    "source": [
     "# Packaging and Building\n",
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "700b94bf",
+   "id": "d75b1eab",
    "metadata": {},
    "source": [
     "# Redux"
@@ -483,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affd165e",
+   "id": "e10101b7",
    "metadata": {},
    "source": [
     "## Setup (for Project)\n",
@@ -569,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad33d6e2",
+   "id": "37082a66",
    "metadata": {},
    "source": [
     "# Virtual DOM\n",
@@ -589,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eefff3ff",
+   "id": "735f5a32",
    "metadata": {},
    "source": [
     "# Re-Rendering\n",
@@ -604,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea09bda4",
+   "id": "b6d5985a",
    "metadata": {},
    "outputs": [],
    "source": []
